Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ table.CodeRay td.code>pre{padding:0}
 <h2 id="_introduction">1. Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Vavr is a functional library for Java 8+ that provides persistent data types and functional control structures.</p>
+<p>Vavr (formerly called Javaslang) is a functional library for Java 8+ that provides persistent data types and functional control structures.</p>
 </div>
 <div class="sect2">
 <h3 id="_functional_data_structures_in_java_8_with_vavr">1.1. Functional Data Structures in Java 8 with Vavr</h3>
@@ -2525,7 +2525,7 @@ limitations under the License.</p>
 <div id="footer">
 <div id="footer-text">
 Version 0.9.0<br>
-Last updated 2017-05-19 17:55:40 +02:00
+Last updated 2017-05-19 19:01:36 +02:00
 </div>
 </div>
 </body>
