--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
 <span id="revnumber">version 0.9.2,</span>
-<span id="revdate">2018-10-01</span>
+<span id="revdate">2019-01-19</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -2086,14 +2086,14 @@ Stream.from(<span class="integer">1</span>).filter(i -&gt; i % <span class="inte
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">LinkedHashMap</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">const<sup>eff</sup></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">const<sup>eff</sup></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">linear</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">linear</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">linear</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">LinkedHashSet</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">const<sup>eff</sup></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">const<sup>eff</sup></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">linear</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">linear</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">linear</p></td>
 </tr>
