Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
 <span id="revnumber">version 0.9.3,</span>
-<span id="revdate">2019-01-19</span>
+<span id="revdate">2019-04-15</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -971,7 +971,7 @@ Tuple2&lt;<span class="predefined-type">Integer</span>, <span class="predefined-
 <p>Lambda brought Java and Scala closer together, yet they are still so different. Martin Odersky, the creator of Scala, recently mentioned in his <a href="https://www.youtube.com/watch?v=NW5h8d_ZyOs">BDSBTB 2015 keynote</a> the state of the Java 8 collections.</p>
 </div>
 <div class="paragraph">
-<p>He described Java’s Stream as a fancy form of an Iterator. The Java 8 Stream API is an example of a <em>lifted</em> collection. What it does is to <em>define</em> a computation and <em>link</em> it to a specific collection in another excplicit step.</p>
+<p>He described Java’s Stream as a fancy form of an Iterator. The Java 8 Stream API is an example of a <em>lifted</em> collection. What it does is to <em>define</em> a computation and <em>link</em> it to a specific collection in another explicit step.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2529,7 +2529,7 @@ limitations under the License.</p>
 <div id="footer">
 <div id="footer-text">
 Version 0.9.3<br>
-Last updated 2017-05-19 19:01:36 +02:00
+Last updated 2019-04-15 14:41:19 +02:00
 </div>
 </div>
 </body>
