Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ table.CodeRay td.code>pre{padding:0}
 <h1>Vavr User Guide</h1>
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
-<span id="revnumber">version {project-version},</span>
+<span id="revnumber">version 0.10.5,</span>
 <span id="revdate">2024-12-05</span>
 </div>
 <div id="toc" class="toc2">
@@ -1151,7 +1151,7 @@ Tuple2&lt;<span class="predefined-type">Integer</span>, <span class="predefined-
 <div class="listingblock">
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="groovy">dependencies {
-    compile "io.vavr:vavr:{project-version}"
+    compile "io.vavr:vavr:0.10.5"
 }</code></pre>
 </div>
 </div>
@@ -1161,7 +1161,7 @@ Tuple2&lt;<span class="predefined-type">Integer</span>, <span class="predefined-
 <div class="listingblock">
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="groovy">dependencies {
-    implementation "io.vavr:vavr:{project-version}"
+    implementation "io.vavr:vavr:0.10.5"
 }</code></pre>
 </div>
 </div>
@@ -2551,8 +2551,8 @@ limitations under the License.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version {project-version}<br>
-Last updated 2024-12-05 20:51:54 +0100
+Version 0.10.5<br>
+Last updated 2024-12-05 21:05:16 +0100
 </div>
 </div>
 </body>
