Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -2552,7 +2552,7 @@ limitations under the License.</p>
 <div id="footer">
 <div id="footer-text">
 Version 0.10.5<br>
-Last updated 2024-12-05 21:05:16 +0100
+Last updated 2024-12-05 20:43:05 UTC
 </div>
 </div>
 </body>
