Publish of Github pages from Gradle.

--- a/es/license.html
+++ b/es/license.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_license">License</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Copyright 2014-2018 Vavr, <a href="http://vavr.io" class="bare">http://vavr.io</a></p>
+<p>Copyright 2014-2025 Vavr, <a href="https://vavr.io" class="bare">https://vavr.io</a></p>
 </div>
 <div class="paragraph">
 <p>Licenciado bajo la Licencia Apache, Versión 2.0 (la "Licencia");
@@ -459,7 +459,7 @@ Consulta la Licencia para conocer los permisos y las limitaciones bajo la Licenc
 <div id="footer">
 <div id="footer-text">
 Version 0.10.5<br>
-Last updated 2024-12-06 17:26:40 UTC
+Last updated 2024-12-06 17:38:04 UTC
 </div>
 </div>
 </body>
